--- a/VgBAQ/src/app/main/main.page.html
+++ b/VgBAQ/src/app/main/main.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <div class="flex items-center justify-between px-4 py-2">
       <div class="flex items-center space-x-3">
-        <div class="w-8 h-8 rounded-full flex items-center justify-center"style="background-color: var(--ion-color-primary);">
+        <div class="w-8 h-8 rounded-full flex items-center justify-center" style="background-color: var(--ion-color-primary);">
           <ion-icon name="home-outline" class="text-lg"></ion-icon>
         </div>
         <h1 class="font-bold text-xl tracking-wide">Mi App</h1>
@@ -20,21 +20,21 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [scrollEvents]="true" (ionScroll)="scrolling($event)" class="ion-padding">
-    <ion-router-outlet></ion-router-outlet>
+<ion-content>
+  <ion-router-outlet></ion-router-outlet>
 </ion-content>
 
 <ion-tab-bar>
-
-  <ion-tab-button tab="home" href="/home">
+  <ion-tab-button tab="home" href="/main/home">
     <ion-icon name="home-outline"></ion-icon>
     <ion-label>Inicio</ion-label>
   </ion-tab-button>
 
-  <ion-tab-button tab="security" href="/security">
+  <ion-tab-button tab="security" href="/main/security">
     <ion-icon name="shield-outline"></ion-icon>
     <ion-label>Seguridad</ion-label>
   </ion-tab-button>
+  
   <ion-tab-button disabled="true">
     <ion-icon name="search-outline"></ion-icon>
     <ion-label>Buscar</ion-label>
@@ -44,5 +44,4 @@
     <ion-icon name="heart-outline"></ion-icon>
     <ion-label>Favoritos</ion-label>
   </ion-tab-button>
-
 </ion-tab-bar>
