--- a/src/app/auth/welcome-page/welcome-page.page.html
+++ b/src/app/auth/welcome-page/welcome-page.page.html
@@ -111,7 +111,7 @@
     [isOpen]="isModalOpen" 
     [initialBreakpoint]="0.6" 
     handleBehavior="cycle" 
-    [breakpoints]="[0, 0.6, 0.9]"
+    [breakpoints]="[0, 0.6, 0.7, 0.9, 1]"
     (didDismiss)="onModalDismiss()">
     <ng-template>
       <ion-content>
